tests/allowlist/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: test-values
policies:
  - name: allow-operator-subscriptions
    rules:
      - name: check-subscription-name
        values:
          allowedPackages:
            data:
              packages: "web-terminal, openshift-gitops-operator"
